2008-12-09  Wolfgang Lux  <wolfgang.lux@gmail.com>

	* Source/NSTextView_actions.m (-centerSelectionInVisibleArea:):
	Provide a provisional implementation.

	* Source/NSSavePanel.m (-setAllowedFileTypes:): Change extension
	of the file name if the current extension is no longer allowed.

2008-12-08 Fred Kiefer <FredKiefer@gmx.de>

	* Headers/AppKit/NSTextFieldCell.h: Declare new private method
	_drawBackgroundWithFrame:inView:. 
	* Source/NSTextFieldCell.m: Change drawInteriorWithFrame:inView:
	into _drawBorderAndBackgroundWithFrame:inView:. And moved some
	code into _drawBackgroundWithFrame:inView:.
	Remove some minor optimisations to simplify code.
	* Source/NSTextFieldCell.m (-initWithCoder:): Correct memory leak
	and improve decoding.
	* Source/NSTextFieldCell.m (-encodeWithCoder:): Encode bezel style.
	* Source/NSTableHeaderView.m
	(-_drawBorderAndBackgroundWithFrame:inView:), 
	* Source/NSBrowser.m (GSBrowserTitleCell
	-_drawBorderAndBackgroundWithFrame:inView:):  Use
	_drawBackgroundWithFrame:inView:. 

2008-12-07 22:50-EST Gregory John Casamento <greg_casamento@yahoo.com>

	* Source/NSTableView.m: Switch to the alternate highlighting color
	only when the background is white.

2008-12-07 22:30-EST Gregory John Casamento <greg_casamento@yahoo.com>

	* Source/NSTableView.m: Change highlighting color so that it shows
	on both white and grey backgrounds.

2008-12-07 Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSWindowController.m (-initWithWindow:,
	-initWithWindowNibPath:owner:, -initWithWindowNibName:owner:,
	-initWithCoder:): Made all initialisation methods a bit safer.
	Solves bug #25004.
	* Source/NSCachedImageRep.m(-draw): Don't draw an empty
	rect. Fixes the remaining issue of #22282.
	
2008-12-07  Wolfgang Lux  <wolfgang.lux@gmail.com>

	* Source/NSTextView.m (-mouseDown:): Start drag operation only
	after a single click into the selected range.

2008-12-07 Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSSound.m:
	* Source/NSWorkspace.m: